[tool.poetry]
name = "django-private-media"
version = "0.1.5"
description = "Private media for Django. Check the user's authorization before serving files at PRIVATE_MEDIA_URL, uploaded to PRIVATE_MEDIA_ROOT. Requires Django 1.5."
license = "BSD License"
keywords = ["private", "media", "xsendfile"]
classifiers = ["Environment :: Web Environment", "Framework :: Django", "Intended Audience :: Developers", "License :: OSI Approved :: BSD License", "Operating System :: OS Independent", "Programming Language :: Python", "Programming Language :: Python :: 2.7", "Topic :: Internet :: WWW/HTTP", "Topic :: Internet :: WWW/HTTP :: Dynamic Content"]
homepage = "https://github.com/RacingTadpole/django-private-media"
authors = ["Arthur Street <arthur@racingtadpole.com>"]
readme = "README.txt"

[tool.poetry.dependencies]
python = "*"
